# dijkstra-steiner-algo

./: CMakeLists.txt  Readme.md
instances/: i02.sdtg  i03.sdtg  i04.sdtg  i05.sdtg  i06.sdtg  i08.sdtg  i10.sdtg  i13.sdtg  i20.sdtg  simple.sdtg
src/: Position.cpp  Position.h  Reader.cpp  Reader.h  Terminal.cpp  Terminal.h  TerminalSubset.cpp  TerminalSubset.h  main.cpp  typedefs.h  utils.h
src/dijkstra_steiner_algorithm/: DijkstraSteinerAlgorithm.cpp  DijkstraSteinerAlgorithm.h  Instance.h  Labels.cpp  Labels.h  NodePlusTerminalSubset.h
src/dijkstra_steiner_algorithm/lower_bound/: BoundingBoxLowerBound.h  LowerBound.h  MinimumSpanningTreeLowerBound.h  OneTreeLowerBound.h  ZeroLowerBound.h
src/graph/: HananGridGraph.cpp  HananGridGraph.h  Node.h
src/heap/: Heap.h
tests/: Position.cpp  Reader.cpp  Terminal.cpp  TerminalSubset.cpp  tests.cpp  utils.cpp
tests/dijkstra_steiner_algorithm/: Labels.cpp
tests/dijkstra_steiner_algorithm/lower_bound/: BoundingBoxLowerBound.cpp  MinimumSpanningTreeLowerBound.cpp
tests/fixtures/: general_fixtures.h
tests/graph/: HananGridGraph.cpp
